# kvcache

./: .bazelrc  .gitignore  BUILD  CLAUDE.md  DESIGN.md  LEARNINGS.md  MODULE.bazel
client/: BUILD  README.md
core/: BUILD  README.md
core/src/com/kvcache/core/api/: EventBus.java  HealthCheck.java  Lifecycle.java
core/src/com/kvcache/core/exception/: KVCacheException.java
core/src/com/kvcache/core/impl/: InMemoryEventBus.java
core/src/com/kvcache/core/model/: CacheKey.java  CacheValue.java  ConsistencyLevel.java  NodeId.java  NodeState.java
dashboard/: BUILD  README.md
docs/: storage-design.md  wal-design.md
gossip/: BUILD  README.md
llm/: BUILD  README.md
partition/: BUILD  README.md
proto/: BUILD  README.md
replication/: BUILD  README.md
server/: BUILD  README.md
storage/: BUILD  README.md
storage/src/com/kvcache/storage/api/: EvictionStrategy.java  StorageEngine.java
storage/src/com/kvcache/storage/exception/: EntryTooLargeException.java  StorageException.java
storage/src/com/kvcache/storage/impl/: CostAwareEviction.java  InMemoryStorageEngine.java  LRUEviction.java  LocalStorageEngine.java  MemTable.java  SnapshotFile.java  SnapshotManager.java  TTLCleaner.java
storage/src/com/kvcache/storage/model/: MemTableEntry.java  StorageConfig.java  StorageStats.java
wal/: BUILD  README.md
wal/src/com/kvcache/wal/api/: WAL.java  WALEntry.java  WALEntryVisitor.java
wal/src/com/kvcache/wal/exception/: WALCorruptionException.java  WALFullException.java
wal/src/com/kvcache/wal/impl/: InMemoryWAL.java  WALCompactor.java  WALReader.java  WALSegment.java  WALWriter.java
wal/src/com/kvcache/wal/model/: WALConfig.java  WALSegmentInfo.java
