"""
KVCache — Distributed KV Cache for LLM Serving.
Bazel Bzlmod workspace declaration (requires Bazel 9+).
"""

module(
    name = "kvcache",
    version = "0.1.0",
)

# ──────────────────────────────────────────────────────────────────────────────
# Core build rules
# ──────────────────────────────────────────────────────────────────────────────

bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.4")

# Maven dependency resolution via rules_jvm_external.
# gRPC Java runtime jars (grpc-netty, grpc-stub, grpc-protobuf) come from
# Maven — no grpc-java Bazel module needed. gRPC codegen will be added later.
bazel_dep(name = "rules_jvm_external", version = "6.7")

# Java 21 toolchain version is set via --java_language_version=21 in .bazelrc.
# rules_java registers the default remote JDK toolchains automatically.

# ──────────────────────────────────────────────────────────────────────────────
# Maven artifacts
# ──────────────────────────────────────────────────────────────────────────────

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # gRPC
        "io.grpc:grpc-api:1.62.2",
        "io.grpc:grpc-netty:1.62.2",
        "io.grpc:grpc-stub:1.62.2",
        "io.grpc:grpc-protobuf:1.62.2",
        "io.grpc:grpc-services:1.62.2",
        # Protobuf
        "com.google.protobuf:protobuf-java:3.25.2",
        "com.google.protobuf:protobuf-java-util:3.25.2",
        # Required by generated gRPC stubs
        "javax.annotation:javax.annotation-api:1.3.2",
        # Web UI (dashboard module)
        "io.javalin:javalin:6.1.3",
        "org.slf4j:slf4j-api:2.0.12",
        "org.slf4j:slf4j-simple:2.0.12",
        # Testing
        "org.junit.jupiter:junit-jupiter:5.10.2",
        "org.junit.jupiter:junit-jupiter-api:5.10.2",
        "org.junit.jupiter:junit-jupiter-engine:5.10.2",
        "org.junit.platform:junit-platform-launcher:1.10.2",
        "org.junit.platform:junit-platform-engine:1.10.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://repo.maven.apache.org/maven2",
    ],
    fail_if_repin_required = False,
)
use_repo(maven, "maven")
